第二次提交，新增导航栏与图片大图展示功能

--- a/index.html
+++ b/index.html
@@ -12,12 +12,22 @@
     </style>
   </head>
   <body>
-    <h1>刘亦菲</h1>
+    <nav>
+        <ol>
+            <li><a href="#xixi">个人介绍</a></li>
+            <li><a href="#events">重要事件</a></li>
+            <li><a href="#achievements">主要成就</a></li>
+            <li><a href="#works">主要作品</a></li>
+            <li><a href="#pictures">生活照</a></li>
+            <li><a href="#stories">生平</a></li>
+        </ol>
+    </nav>
+    <h1 id="xixi">刘亦菲</h1>
     <p>
       刘亦菲（Crystal
       Liu，1987年8月25日－）为华裔美籍的女演员、歌手。出生于湖北武汉，后随母亲移居美国纽约，毕业于北京电影学院表演系2002级本科班。
     </p>
-    <h2>重要事件</h2>
+    <h2 id="events">重要事件</h2>
     <p>
       <ul>
           <li>2002年，主演电视剧《金粉世家》进入演艺圈，相继饰演了王语嫣、赵灵儿和小龙女等知名角色。</li>
@@ -27,7 +37,7 @@
           <li>2017年从迪士尼《花木兰》真人版电影试镜中脱颖而出，成为花木兰的饰演者。</li>
       </ul>
     </p>
-    <h2>主要成就</h2>
+    <h2 id="achievements">主要成就</h2>
 
         <ol>
             <li>2021-3	第46届土星奖：最佳女主角 	《花木兰》	提名</li>
@@ -45,7 +55,7 @@
             <li>2012-3	第24届香港专业电影摄影师学会：最具魅力女演员奖 	《倩女幽魂》	获奖</li>
         </ol>
     
-        <h2>主要作品</h2>
+        <h2 id="works">主要作品</h2>
         <table>
             <thead>        
                 <tr><th>时间</th><th>电影名</th><th>角色名</th></tr>
@@ -113,12 +123,12 @@
                 </tr>
             </tbody>
         </table>
-        <h2>生活照</h2>
-            <div><img width="400"  src="images/1.jpg" alt="图一"></div>
-            <div><img width="400"  src="images/2.jpg" alt="图二"></div>
-            <div><img width="400"  src="images/3.jpg" alt="图三"></div>
+        <h2 id="pictures">生活照</h2>
+            <div><a href="images/1.jpg" target="_blank"> <img width="400"  src="images/1.jpg" alt="图一"></a></div>
+            <div><a href="images/2.jpg" target="_blank"> <img width="400"  src="images/2.jpg" alt="图二"></a></div>
+            <div><a href="images/3.jpg" target="_blank"> <img width="400"  src="images/3.jpg" alt="图三"></a></div>
 
-        <h2>生平</h2>
+        <h2 id="stories">生平</h2>
         <p>
             刘亦菲出生时随父姓，原名“安风”，4岁时父母离异由母抚养，随母姓并由外婆改为现名。刘亦菲自称3岁时由于一本满是好莱坞电影海报的挂历而萌生了做演员的想法。由于经常观看母亲演出的缘故，刘亦菲从小便接受艺术的熏陶，并显露出了做明星的潜质，她在中南商都第二届“童花杯”童装模特大奖赛中获得冠军。
         </p>
